test/valid/fc36994_TestError/TestExplicitError.plume
/**
 * Tests explicit error
 * @author 36994, César Santos
 */
class TestExplicitError extends Object is
  method main : () -> String is //expected : error
    error