test/invalid/MissingParentheses/MissingParentheses.plume
/**
 * Missing parentheses
 * @author 36994, César Santos
 */
class MissingParentheses extends Object is
  method test : -> Boolean is
    true